syntax = "proto3";

option java_multiple_files = true;
package com.webtoeic.grpc.transferimg;

message ImgUploadRequest {
  int64 id = 1;
  bytes photo = 2;
}

message ImgReply {
  string message = 1;
}

message ImgAuthRequest{
    string email =1;
    bytes photo = 2;
}

service Greeter {
  rpc ImgRegister (ImgUploadRequest) returns (ImgReply);
  rpc ImgAuth (ImgAuthRequest) returns (ImgReply);
}